# bamps_offline_analysis

./: CMakeCustomPackageOptions.cmake  CMakeLists.txt  ConfigureDoxygenTarget.cmake  Doxyfile.in  SetCompilersAndBuildFlags.cmake  example_input  lib
cmake_modules/: CppcheckTargets.cmake  FindBAMPS.cmake  FindCuba.cmake  FindGSL.cmake  FindLHAPDF.cmake  FindPythia.cmake  Findcppcheck.cmake  Findcppcheck.cpp  HostProperties.cmake  SetCompilersAndBuildFlags.cmake  getsvn.cmake
src/: CMakeLists.txt  FPT_compare.cpp  FPT_compare.h  README.txt  additionalparticlesdistribution.cpp  additionalparticlesdistribution.h  analysis.cpp  analysis.h  binary_cross_sections.cpp  binary_cross_sections.h  binning.cpp  binning.h  binning2.cpp  binning2.h  cellcontainer.cpp  cellcontainer.h  cgcInitialDistribution.cpp  cgcInitialDistribution.h  config.h.in  configBAMPS.h.in  configuration.cpp  configuration.h  coordinateBins.cpp  coordinateBins.h  fixedshower_event.f  getsvn.cmake  hadronization.cpp  hadronization.h  hadronization_hq.cpp  hadronization_hq.h  hqshower_event.f90  ini_jpsi.cpp  ini_jpsi.h  initialShower.cpp  initialShower.h  initialdistribution.cpp  initialdistribution.h  initialmodel.cpp  initialmodel.h  initialmodel_cgc.cpp  (+92 more)
tests/: 21_pythiashower.cpp  22_hqshower.cpp  23_mcatnlo_analysis.cpp  CMakeLists.txt
