CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules/")

PROJECT(offline_cascade)


SET(Boost_ADDITIONAL_VERSIONS "1.41" "1.41.0")
SET(BOOST_ROOT "$ENV{HOME}/usr")
MESSAGE(STATUS "** Search Boost root: ${BOOST_ROOT}")
FIND_PACKAGE(Boost 1.41 COMPONENTS system filesystem regex REQUIRED)
 MESSAGE(STATUS "** Boost Include: ${Boost_INCLUDE_DIR}")
 MESSAGE(STATUS "** Boost Libraries: ${Boost_LIBRARY_DIRS}")

FIND_PACKAGE(Cuba)

#INCLUDE_DIRECTORIES(${CUBA_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} ${CUBA_INCLUDE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})


ADD_SUBDIRECTORY(src)

INCLUDE(CMakeCustomPackageOptions.cmake)
INCLUDE(CPack)
